Add explicit source/sink operator types (ESQL-440)
Adds explicit Source and Sink operator types. Allows for future
refactorings like ensuring, by design, that a Driver / Pipeline starts
with a source and ends with a sink. Additionally, ensures that all
source and sink operators behave consistently.